--- a/dashboard.html
+++ b/dashboard.html
@@ -20,8 +20,8 @@
   <div class="card">
     <h3>Sensor Data</h3>
     <p>Flow Rate: <span id="flow"></span></p>
-    <p>Pressure: <span id="pressure"></span></p>
-    <p>Level: <span id="level"></span></p>
+    <p>Leak Rate: <span id="pressure"></span></p>
+    <!--<p>Level: <span id="level"></span></p>-->
   </div>
 
   <div class="card">
