--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
     <title>Water Awareness</title> 
     <link rel="stylesheet" href="./css/index.css"> 
     </head> <body> <div class="container"> 
-        <h1>Detect.Protect.Conserve</h1> <!-- Video --> 
-        <div class="video"> <video width="500" controls> 
-            <source src="assets/water_video.mp4" type="video/mp4"> Your browser does not support the video tag. </video> 
-        </div> <!-- Link to Dashboard --> 
+        <h1>Detect.Protect.Conserve</h1>
+         <!-- Video --> 
+          <div class="video">
+  <iframe width="650" height="300"
+    src="https://www.youtube.com/embed/lMftJ4BiCjo"
+    title="Water Awareness"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+  </iframe>
+</div>
+
+         <!-- Link to Dashboard --> 
         <div class="dashboard-link"> 
             <a href="dashboard.html" class="btn">Go to Dashboard</a> 
         </div> 
