--- a/backend/dashboard.html
+++ b/backend/dashboard.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Water Leak Dashboard</title>
   <link rel="stylesheet"href="./css/style.css"/>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/luxon"></script>
-<script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
 </head>
 <body>
   <h1>Real-Time Water Leak Dashboard</h1>
@@ -20,8 +19,9 @@
     <div class="cards-container">
   <div class="card">
     <h3>Sensor Data</h3>
-   <p>Flow 1: <span id="flow1"></span> mL/s</p>
-  <p>Flow 2: <span id="flow2"></span> mL/s</p>
+    <p>Flow Rate: <span id="flow"></span></p>
+    <p>Pressure: <span id="pressure"></span></p>
+    <p>Level: <span id="level"></span></p>
   </div>
 
   <div class="card">
